Fix class list overflow

--- a/mystyles.css
+++ b/mystyles.css
@@ -32,7 +32,7 @@ ul,li {
   display: inline;
   font-family: "Palatino Linotype";
   text-align: center;
-  padding: 10px 1px;
+  padding: 10px auto;
 }
 
 table {
